[package]
name = "locker"
version = "0.0.1"
license = "EUPL-1.2"
description = "linting for your flake.lock"
homepage = "https://github.com/isabelroses/locker"
authors = ["isabel roses"]
edition = "2024"

[dependencies]
argh = "0.1.13"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
